# Electron

./: .gitignore  API_Doc.yaml  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  rec.txt  res.txt
back/: alembic.ini  main.py
back/alembic/: env.py
back/alembic/versions/: 9b8b9f916cac_inital.py
back/app/endpoints/: additional_tasks.py  api_keys.py  data_sources_crud.py  group.py  import_fiels.py  users.py
back/app/logic/: create_file.py
back/app/models/: __init__.py  api_keys.py  data_sources.py  db.py  group.py  item.py  users.py
back/app/schems/: __init__.py  api_keys.py  data_sources.py  group.py  item.py  users.py
back/app/utils/: delete.py
back/app/utils/items/: utils.py
back/config/: file_save_config.py  settings.py
back/lib/: db_acessor.py
src/: dataSources.html  dataSources.js  documents.html  documents.js  groups.html  index.html  index.js  popups.js  preload.js  users.html  users.js  utils.js
src/blocks/aside-menu/: aside__menu.css
src/blocks/aside-menu/__img/: aside-menu__img.css
src/blocks/aside-menu/__item/: aside-menu__item.css
src/blocks/aside-menu/__list/: aside-menu__list.css
src/blocks/aside-menu/__text/: aside-menu__text.css
src/blocks/content/: content.css
src/blocks/footer/: footer.css
src/blocks/header/: header.css
src/blocks/header/__account/: header__account.css
src/blocks/header/__logo-container/: header__logo-container.css
src/blocks/information/: information.css
src/blocks/page/: page.css
src/blocks/popup/: popup.css
src/pages/: index.css
(+43 files in other folders)
