[tool.poetry]
name = "electron"
version = "0.1.0"
description = ""
authors = ["Andray-Sfedu <moscow.russia.mai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
fastapi = "^0.84.0"
fastapi-pagination = "^0.10.0"
uvicorn = "^0.18.3"
unicorn = "^2.0.0"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"
DateTime = "^4.7"
python-dateutil = "^2.8.2"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
